# goit_web_HW9

./: README.md  authors.json  main.py  pyproject.toml
Soup/: kacapy.json  main.py
